feat(#149): add api reference, testing guide, and contributor guide
Fills out the /api/, /guide/testing, and /contributing/development
sections of the VitePress site. Rewrites the previous stub development
page with prereqs, repo layout, dogfooded workflow rules, commit
conventions, module/skill/scenario walkthroughs, and release flow.

Adds api/types, api/builders, api/installers, api/runners — signatures,
call graphs, and the marker pattern explained. Adds guide/testing with
the four-layer pyramid (pre-commit, pre-push, full, docker) and the
18-scenario priority rationale. Wires guide/testing into the sidebar.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>